export const snapshot = {};

snapshot[`tests > track > list > name 1`] = `
"
✨ alpha    
"
`;

snapshot[`tests > track > list > name 2`] = `[]`;

snapshot[`tests > track > list > name 3`] = `
"
✨ beta    
"
`;

snapshot[`tests > track > list > name 4`] = `[]`;

snapshot[`tests > track > list > name 5`] = `
"
✨ alpha    
✨ beta     
"
`;

snapshot[`tests > track > list > name 6`] = `[]`;

snapshot[`tests > track > list > name 7`] = `
"
✨ alpha    
"
`;

snapshot[`tests > track > list > name 8`] = `[]`;

snapshot[`tests > track > list > name 9`] = `
"
✨ beta    
"
`;

snapshot[`tests > track > list > name 10`] = `[]`;

snapshot[`tests > track > list > name 11`] = `
"

"
`;

snapshot[`tests > track > list > name 12`] = `[]`;

snapshot[`tests > track > list > name 13`] = `
"
✨ alpha    
✨ beta     
"
`;

snapshot[`tests > track > list > name 14`] = `[]`;

snapshot[`tests > track > list > name 15`] = `
"
✨ beta    
"
`;

snapshot[`tests > track > list > name 16`] = `[]`;

snapshot[`tests > track > list > invalid name 1`] = `
"
error: option '-e, --exercise <slug>' argument '?alpha' is invalid. Invalid slug ?alpha.

"
`;

snapshot[`tests > track > list > invalid name 2`] = `[]`;

snapshot[`tests > track > list > unlocked 1`] = `
"
✨ unlocked    
"
`;

snapshot[`tests > track > list > unlocked 2`] = `[]`;

snapshot[`tests > track > list > unlocked 3`] = `
"
✨ unlocked    
🔒 locked      
"
`;

snapshot[`tests > track > list > unlocked 4`] = `[]`;

snapshot[`tests > track > list > unlocked 5`] = `
"
🔒 locked    
"
`;

snapshot[`tests > track > list > unlocked 6`] = `[]`;

snapshot[`tests > track > list > difficulty 1`] = `
"
✨ easy    
"
`;

snapshot[`tests > track > list > difficulty 2`] = `[]`;

snapshot[`tests > track > list > difficulty 3`] = `
"
✨ medium    
"
`;

snapshot[`tests > track > list > difficulty 4`] = `[]`;

snapshot[`tests > track > list > difficulty 5`] = `
"
✨ hard    
"
`;

snapshot[`tests > track > list > difficulty 6`] = `[]`;

snapshot[`tests > track > list > status 1`] = `
"
✨ new    
"
`;

snapshot[`tests > track > list > status 2`] = `[]`;

snapshot[`tests > track > list > status 3`] = `
"
💻 started        
✅ completed 📜   
✅ published      
"
`;

snapshot[`tests > track > list > status 4`] = `[]`;

snapshot[`tests > track > list > status 5`] = `
"
✅ completed 📜   
✅ published      
"
`;

snapshot[`tests > track > list > status 6`] = `[]`;

snapshot[`tests > track > list > status 7`] = `
"
✅ published    
"
`;

snapshot[`tests > track > list > status 8`] = `[]`;

snapshot[`tests > track > list > status 9`] = `
"
✅ completed 📜   
"
`;

snapshot[`tests > track > list > status 10`] = `[]`;

snapshot[`tests > track > list > feedback 1`] = `
"
⚠️  automated-feedback 📜 🤖  
"
`;

snapshot[`tests > track > list > feedback 2`] = `[]`;

snapshot[`tests > track > list > feedback 3`] = `
"
✅ human-feedback 📜 💡  
"
`;

snapshot[`tests > track > list > feedback 4`] = `[]`;

snapshot[`tests > track > list > outdated 1`] = `
"
✅ outdated 🕰️   
"
`;

snapshot[`tests > track > list > outdated 2`] = `[]`;

snapshot[`tests > track > list > test status 1`] = `
"
✅ passing                     📜     
❌ failing                     📜  🧪 
✳️  notQueued [no test results] 📜  🧪 
"
`;

snapshot[`tests > track > list > test status 2`] = `[]`;

snapshot[`tests > track > list > test status 3`] = `
"
✅ passing 📜   
"
`;

snapshot[`tests > track > list > test status 4`] = `[]`;

snapshot[`tests > track > list > test status 5`] = `
"
❌ failing 📜  🧪 
"
`;

snapshot[`tests > track > list > test status 6`] = `[]`;

snapshot[`tests > track > list > social 1`] = `
"
✅ starred    ⭐⭐      
✅ both       ⭐⭐⭐💬💬
"
`;

snapshot[`tests > track > list > social 2`] = `[]`;

snapshot[`tests > track > list > social 3`] = `
"
✅ commented    💬        
✅ both         ⭐⭐⭐💬💬
"
`;

snapshot[`tests > track > list > social 4`] = `[]`;

snapshot[`tests > track > list > not joined 1`] = `
"
🔮 test-exercise    
"
`;

snapshot[`tests > track > list > not joined 2`] = `[]`;

snapshot[`tests > track > subcommand > start 1`] = `
"

❌ Failed to start locked.
💻 Started unlocked."
`;

snapshot[`tests > track > subcommand > start 2`] = `[]`;

snapshot[`tests > track > subcommand > start: not joined 1`] = `
"
❌ Track not-joined is not joined.
"
`;

snapshot[`tests > track > subcommand > start: not joined 2`] = `[]`;

snapshot[`tests > track > subcommand > code 1`] = `
"

✅ Downloaded unlocked.
❌ Failed to start locked.
💻 Started unlocked."
`;

snapshot[`tests > track > subcommand > code 2`] = `
[
  'code("WORKSPACE/joined/unlocked/unlocked.joined", "{ diff: false }")',
]
`;

snapshot[`tests > track > subcommand > diff 1`] = `
"

⚠️  Changes found in unlocked.
✅ Downloaded unlocked.
❌ Failed to start locked.
💻 Started unlocked."
`;

snapshot[`tests > track > subcommand > diff 2`] = `[]`;

snapshot[`tests > track > subcommand > download 1`] = `
"

✅ Downloaded unlocked.
❌ Failed to start locked.
💻 Started unlocked."
`;

snapshot[`tests > track > subcommand > download 2`] = `[]`;

snapshot[`tests > track > deleted track 1`] = `
"

"
`;

snapshot[`tests > track > deleted track 2`] = `[]`;

snapshot[`tests > track > deleted track 3`] = `
"
❌ Track track is not found.
"
`;

snapshot[`tests > track > deleted track 4`] = `[]`;
